# inspect_pthreads4w

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CMakePresets-pthreads4w.json  project-header.cmake
